--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,7 @@ html, body, div, header, footer, h1, h2, img, button, input, section, ul, li, ad
     margin: 0;
     padding: 0;
 }
-header, #main_img, #controller, #best_hotel_wrap, #exhibition, #festival, footer {
+#main_img, #controller, #best_hotel_wrap, #exhibition, #festival {
     width: 960px;
     margin: 0 auto;
     box-sizing: border-box;
@@ -37,7 +37,7 @@ header, #main_img, #controller, #best_hotel_wrap, #exhibition, #festival, footer
 }
 .lodging_wrap{
     height: 85px;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid #666;
 }
 .icon:hover {
     border-bottom: 1px solid rgb(213, 239, 248);
@@ -62,7 +62,7 @@ header, #main_img, #controller, #best_hotel_wrap, #exhibition, #festival, footer
     height: 85px;
     text-align: center;
 }
-.check_in, .check_out {
+.check_in, .check_out, .search {
     border: none;
     width: 150px;
     height: 30px;
@@ -70,17 +70,13 @@ header, #main_img, #controller, #best_hotel_wrap, #exhibition, #festival, footer
     text-align: center;
     margin-right: 15px;
 }
-.search {
-    border: none;
-    width: 150px;
-    height: 30px;
-    margin-top: 27.5px;
-    margin-right: 15px;
-}
-.date > button {
+.date_btn {
     width: 70px;
     height: 30px;
     margin-top: 27.5px;
+    border: none;
+    cursor: pointer;
+    background-color: white;
 }
 /*컨트롤러 영역 종료*/
 
