예약자, 결제정보 페이지

--- a/css/stay_book.css
+++ b/css/stay_book.css
@@ -1,9 +1,8 @@
 @charset "utf-8";
 
 #contentsArea {
-    
+    height: 900px;
     margin-top: 80px;
-    background-color: violet;
 }
 
 
@@ -11,14 +10,12 @@
     float: left;
     width: 600px;
     height: 700px;
-    background-color: antiquewhite;
 }
 
 
 /* 예약자 정보 */
 .reserve_info {
     height: 230px;
-    background-color: aqua;
 }
 .reserve_info > h2 {
     height: 30px;
@@ -27,11 +24,9 @@
 }
 #login_form {
     height: 200px;
-    background-color: bisque;
 }
 .name, .tel {
     height: 100px;
-    background-color: tomato;
 }
 .name > label, .tel > label {
     display: inline-block;
@@ -51,7 +46,6 @@
 .payment_info {
     height: 300px;
     margin-top: 60px;
-    background-color: cyan;
 }
 .payment_info > h2 {
     height: 30px;
@@ -61,7 +55,6 @@
 .form_check_wrap {
     height: 30px;
     margin-top: 20px;
-    background-color: burlywood;
 }
 .form_check_wrap > div {
     display: inline-block;
@@ -70,11 +63,9 @@
 .payment {
     height: 190px;
     margin-top: 30px;
-    background-color: red;
 }
 .pay1 > p {
     height: 40px;
-    background-color: yellow;
 }
 .pay1 > p > label {
     display: inline-block;
@@ -91,7 +82,6 @@
 }
 .pay1 p:nth-child(3) { /* 입금계좌 라인*/
     margin-left: 20px;
-    background-color: green;
 }
 
 .pay2 {
@@ -99,7 +89,6 @@
 }
 .pay2 > p {
     height: 40px;
-    background-color: blueviolet;
 }
 .pay2 > p > label {
     display: inline-block;
@@ -112,32 +101,94 @@
 } 
 
 .agree {
-    height: 200px;
-    background-color: greenyellow;
 }
 .agree > .form-check {
     margin-left: 20px;
-    background-color: darkseagreen;
+    height: 30px;
 }
-.agree_content {
+.agree > .form-check > label {
+    width: 180px;
+}
+.agree > .form-check > span {
+    font-size: 12px;
+    cursor: pointer;
+    color: blue;
+}
+#agr_content {
     overflow: scroll;
     width: 580px;
-    height: 150px;
+    height: 180px;
     margin: 15px 0 0 20px;
-    background-color: aqua;
+    border: 1px solid #888;
+    display: none;
 }
 
 
-
-
-
-
-
-
+/* 우측 숙소 정보란 */
 #room_info {
     float: left;
-    width: 350px;
-    height: 590px;
-    background-color: aquamarine;
-    
+    margin-top: 40px;
+    width: 360px;
+    height: 580px;
+    border: 1px solid #777;
+    border-radius: 3px;
+}
+.room_info_wrap {
+    margin: 20px auto;
+    width: 300px;
+    height: 540px;
+}
+.room_info_pic {
+    text-align: center;
+    margin-left: 20px;
+    width: 260px;
+    height: 180px;
+}
+.room_info_pic > img {
+    width: 250px;
+    height: 180px;
+}
+.room_info_wrap > .room_info_data {
+    margin: 20px 0 0 20px;
+    width: 260px;
+    height: 270px;
+}
+.room_info_data > p {
+    height: 20px;
+}
+.room_name {
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+.room_type {
+    font-size: 15px;
+    margin-bottom: 25px;
+}
+.room_in, .room_out {
+    margin-bottom: 10px;
+    font-weight: bold;
+}
+.date {
+    font-size: 15px;
+    margin-bottom: 25px;
+}
+.total {
+    text-align: right;
+    font-weight: bold;
+    margin: 10px 10px 0 0;
+    font-size: 20px;
+}
+.room_pay {
+    width: 260px;
+    height: 40px;
+    margin: 20px 0 0 20px;
+    text-align: center;
+}
+.room_pay > button {
+    border: none;
+    border-radius: 5px;
+    width: 160px;
+    height: 40px;
+    background-color: rgb(83, 153, 219);
+    color: white;
 }
