--- a/css/login.css
+++ b/css/login.css
@@ -14,14 +14,23 @@ button {
     border-radius: 3px;
     font-weight: bold;
 }
-
+html, body {
+    width: 100%;
+    height: 100%;
+    position:relative;
+}
+#wrap {
+    position:absolute;
+    left:50%;
+    top:50%;
+    margin-left:-200px;
+    margin-top:-200px;
+}
 #login_wrap {
-    margin: 12% auto;
-    width: 470px;
-    height: 500px;
+    width: 400px;
+    height: 400px;
 }
 #login_form {
-    margin-top: 10px;
     text-align: center;
     height: 200px;
 }
@@ -30,7 +39,7 @@ fieldset {
     border: none;
 }
 .title {
-    width: 470px;
+    width: 4y0px;
     height: 50px;
     margin-top: 15px;
 }
