--- a/css/index/index.css
+++ b/css/index/index.css
@@ -119,6 +119,9 @@ main {
 /*인기숙소 영역 종료*/
 
 
+#un_left {
+    margin-left: 4px;
+}
 /*공연/전시 영역 시작*/
 #exhibition {
     width: 574px;
@@ -137,6 +140,7 @@ main {
 }
 .exhibition_pic > img {
     width: 180px;
+    height: 245px;
     /*height: 165px;*/
     border-radius: 3px;
 }
@@ -184,6 +188,27 @@ main {
 /*축제 영역 종료*/
 
 
+/* 인기 숙소, 공연/전시, 축제 공통 */
 article {
     margin-bottom: 70px;
+}
+
+
+/* 우측 하단 */
+#place {
+    text-align: center;
+  /*  background-color: rgb(245, 245, 255);*/
+}
+#history, #landmark {
+    text-align: center;
+}
+#place > p, #history > p, #landmark > p {
+    margin-bottom: 5px;
+}
+.fa-thumbs-up {
+    color: #ee3366;
+   /* -webkit-text-stroke: 1px rgb(149, 146, 146); 글자 테두리 */
+}
+.fa-utensils {
+    color: #ee3366;
 }
