--- a/css/stay/index.css
+++ b/css/stay/index.css
@@ -1,9 +1,5 @@
 @charset "utf-8";
 
-html, body, div, header, footer, h1, h2, img, button, input, section, ul, li, address, span, p {
-    margin: 0;
-    padding: 0;
-}
 #controller, #best_hotel_wrap, #exhibition, #festival {
     width: 960px;
     margin: 0 auto;
@@ -195,20 +191,28 @@ article {
 
 
 /* 우측 하단 */
-#place {
+#place, #history, #landmark {
     text-align: center;
-  /*  background-color: rgb(245, 245, 255);*/
+    
 }
-#history, #landmark {
-    text-align: center;
+#event_wrap img {
+    width: 264px;
+    
+
 }
+
+
+
+
+
+/*
 #place > p, #history > p, #landmark > p {
     margin-bottom: 5px;
 }
 .fa-thumbs-up {
     color: #ee3366;
-   /* -webkit-text-stroke: 1px rgb(149, 146, 146); 글자 테두리 */
 }
 .fa-utensils {
     color: #ee3366;
 }
+*/
