--- a/css/stay/search_common.css
+++ b/css/stay/search_common.css
@@ -7,7 +7,7 @@
     padding: 20px 0;
     border-top: 1px solid #999;
 }
-#stay_select {
+#stay_select, #selected {
     width: 200px;
     height: 37px;
     border: 1px solid #666;
@@ -18,6 +18,7 @@
     -moz-border-radius: 5px;
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
+    background-color: white;
 }
 #stay_select > option:hover {
     background-color: #48a9ed;
