예약,결제 정보 페이지 class수정

--- a/css/stay/stay_book.css
+++ b/css/stay/stay_book.css
@@ -2,11 +2,9 @@
 
 
 /* 좌측 예약자, 결제 정보란 */
-#contentsArea {
-    height: 750px;
+#contents_area {
     margin-top: 80px;
 }
-
 
 #info {
     float: left;
